# herdr-notes

./: CLAUDE.md  Cargo.toml  README.md  herdr-plugin.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: open-notes.ps1  open-notes.sh
src/: app.rs  ipc.rs  launch.rs  main.rs  markdown.rs  state.rs
tools/: demo-note.md
