[package]
name = "herdr-notes"
version = "0.1.0"
edition = "2024"
description = "Persistent markdown notes pane for herdr"
license = "MIT"

[[bin]]
name = "herdr-notes"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
